--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     margin: 0;
-    height: 100vh;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
 }
 
 .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    gap: 25px;
 }
 
 .links {
@@ -24,8 +28,10 @@ body {
 
 .low-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    padding: 100px;
+    gap: 25px;
 }
 
 .left-header {
@@ -40,21 +46,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 500px;
+    width: 400px;
     height: 200px;
+    flex-shrink: 0;
     background-color: rgb(142, 147, 150);
 }
 
 .mid {
     display: flex;
-    flex: 1;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 50px;
 }
 
 .content {
     display: flex;
     flex-direction: column;
     gap: 50px;
+    padding: 100px 0px;
 }
 
 .random-header {
@@ -68,7 +78,7 @@ body {
 
 .random-squares {
     display: flex;
-    justify-content: space-around;
+    gap: 50px;
 }
 
 .random-squares div {
@@ -76,6 +86,7 @@ body {
     flex-direction: column;
     align-items: center;
     max-width: 150px;
+    gap: 5px;
 }
 
 .square {
@@ -90,6 +101,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #E5E7EB;
+    padding: 150px;
 }
 
 .quote {
@@ -113,9 +125,10 @@ body {
     background-color: #3882F6;
     color: #F9FAF8;
     gap: 125px;
-    padding: 30px;
+    padding: 50px;
     width: 800px;
     border-radius: 8px;
+    margin: 100px 0px;
 }
 
 .action {
@@ -127,6 +140,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px;
 }
 
 .header, .footer {
